<resources>
    <string name="app_name">SPH WAREHOUSE</string>
    <string name="action_settings">Settings</string>
    <string name="chkinbtntxt">CHECK IN</string>
    <string name="chkoutbtntxt">CHECK OUT</string>
    <string name="lbtranstitle">TRANSACTIONS LIST:</string>
    <string name="transnew">CREATE NEW</string>
    <string name="scanbtntxt">SCAN</string>
    <string name="exit">EXIT</string>
    <string name="main_menu">MENU</string>
    <string name="btnlbconfirm">Confirm and Submit</string>
    <string name="lblocation">Target Location:</string>
    <string name="lbboxnum">Box</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="tvboxnumber">Box Number</string>
    <string name="tvboxdept">Department</string>
    <string name="locdesc">Description</string>
    <string name="locid">ID number</string>
</resources>
