<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jsee.sphwarehouse.MainActivity"
   >

    <TextView android:id="@+id/lbmenu"
        android:text="@string/main_menu"
        android:layout_height="50dp"

        android:layout_width="match_parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="6">

    <Button
    android:id="@+id/btnchkin"
    android:layout_below="@id/lbmenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_weight="2"
        android:textSize="30sp"
    android:text="@string/chkinbtntxt"

    android:background="#0044ff"
    android:textColor="#ffffff"
        android:layout_marginBottom="10dp"
        android:onClick="chkinOpenTrans"/>

    <Button
        android:id="@+id/btnchkout"
        android:layout_below="@id/btnchkin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textSize="30sp"

        android:text="@string/chkoutbtntxt"

        android:background="#009c2a"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/frontbg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"

        android:background="@drawable/sphlogoh"
        android:adjustViewBounds="false" />

    </LinearLayout>
</LinearLayout>
