<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3">

    <TextView
        android:id="@+id/tvtransmode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="22sp"
        android:text="Transaction Mode:"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbboxnum"
        android:textSize="22sp"
        android:textColor="#FFFFFF"
        android:padding="10dp"
        android:background="#0066FF"
        />

    <EditText
        android:id="@+id/etbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/btnbnscan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/scanbtntxt"/>
</LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:padding="10dp"
        android:background="#FF5500"
        android:text="@string/lblocation"
        android:textSize="22sp"
        />
    <EditText
        android:id="@+id/etloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/btnlocscan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/scanbtntxt"/>

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">
    <Button
        android:id="@+id/btntransub"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btnlbconfirm"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="#00FF00"
        android:onClick="subTrans"/>

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>


</LinearLayout>